feat: add scan location command executor, API
