# api/openapi/components/schemas/command.yml
@@ -110,6 +110,7 @@ CommandType:
     - CARGO_LIFT
     - CARGO_LOWER
     - CARGO_CHECK_QR
+    - SCAN_LOCATION
   description: The type of command
   x-go-type: string
 
@@ -142,7 +143,7 @@ CommandInputs:
     - $ref: "#/CargoLiftInputs"
     - $ref: "#/CargoLowerInputs"
     - $ref: "#/CargoCheckQRInputs"
-
+    - $ref: "#/ScanLocationInputs"
 StopInputs:
   type: object
 
@@ -184,6 +185,9 @@ CargoCheckQRInputs:
   required:
     - qrCode
 
+ScanLocationInputs:
+  type: object
+
 CommandOutputs:
   oneOf:
     - $ref: "#/StopOutputs"
@@ -195,6 +199,7 @@ CommandOutputs:
     - $ref: "#/CargoLiftOutputs"
     - $ref: "#/CargoLowerOutputs"
     - $ref: "#/CargoCheckQROutputs"
+    - $ref: "#/ScanLocationOutputs"
 
 StopOutputs:
   type: object
@@ -222,3 +227,29 @@ CargoLowerOutputs:
 
 CargoCheckQROutputs:
   type: object
+
+ScanLocationOutputs:
+  type: object
+  properties:
+    locations:
+      type: array
+      items:
+        $ref: "#/Location"
+  required:
+    - locations
+
+Location:
+  type: object
+  properties:
+    location:
+      type: string
+      description: The location (RFID tag)
+      example: "1uxa91o"
+    scannedAt:
+      type: string
+      format: date-time
+      description: The date and time when the location was scanned
+      example: "2025-04-18T12:00:00Z"
+  required:
+    - location
+    - scannedAt
